made netflix logo a home button. Fixed billboard image to shrink for mobile. Made ContentSlider.sass to overflow:hidden and remove margin left and right for slide buttons.

--- a/src/css/components/_billboard.scss
+++ b/src/css/components/_billboard.scss
@@ -3,7 +3,15 @@
   height: 80vh;
   background-position: center;
   background-size: cover;
-
+  @include respond("tab-land") {
+    height: 60vh;
+  }
+  @include respond("tab-port") {
+    height: 50vh;
+  }
+  @include respond("phone-XS") {
+    height: 40vh;
+  }
   &--container {
     display: flex;
     justify-content: space-between;
