--- a/src/css/components/_contentRow.scss
+++ b/src/css/components/_contentRow.scss
@@ -31,4 +31,13 @@
   &:hover .ContentBox:hover {
     transform: scale(1.7);
   }
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    width: 250%;
+    position: absolute;
+    transition: transform 300ms ease 100ms;
+    background-color: black;
+    z-index: 1;
+  }
 }
