--- a/src/css/components/_contentSlider.scss
+++ b/src/css/components/_contentSlider.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 20rem;
   align-items: center;
+  overflow: hidden;
 
   & button {
     height: 70%;
@@ -11,14 +12,11 @@
   }
   &__arrowIcon {
     &--left {
-      right: 5rem;
+      right: 0rem;
       margin-right: auto;
       opacity: 0;
       position: relative;
       z-index: 10;
-      @include respond("tab-port") {
-        right: 0rem;
-      }
       & > svg {
         width: 5rem !important;
         height: 3rem;
@@ -29,16 +27,13 @@
     }
 
     &--right {
-      left: 5rem;
+      left: 0rem;
       opacity: 0;
       position: relative;
       z-index: 10;
       & > svg {
         width: 3rem !important;
         height: 3rem;
-      }
-      @include respond("tab-port") {
-        left: 0rem;
       }
     }
 
