--- a/src/css/components/_contentbox.scss
+++ b/src/css/components/_contentbox.scss
@@ -4,6 +4,7 @@
   overflow: hidden;
   margin: 0;
   position: relative;
+  z-index: 5;
   @include respond("tab-land") {
   }
   @include respond("tab-port") {
